My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1104,39 +1104,57 @@
                                                 <th>Currency</th>
                                             </tr>
                                             <tr *ngFor="let performance of fund.companyPerformanceIdd">
+                                                <td style="font-size: small">
+                                                    {{performance.companyName}}
+                                                </td>
+
                                                 <td>
-                                                    <input type="text" class="form-control" name="companyName" [(ngModel)]="performance.companyName" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #companyName="ngModel"/>
-                                                    <div [hidden]="companyName.valid || companyName.pristine" class="alert alert-danger">
-                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    <input type="text" class="form-control" name="companyDescription" [(ngModel)]="performance.companyDescription" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #companyDescription="ngModel"/>
+                                                    <div [hidden]="companyDescription.valid || companyDescription.pristine" class="alert alert-danger">
+                                                        Company description must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
                                                     </div>
                                                 </td>
 
-                                                <td style="font-size: small">
-                                                    {{performance.companyDescription}}
+                                                <td>
+                                                    <input type="text" class="form-control" name="industry" [(ngModel)]="performance.industry" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #industry="ngModel"/>
+                                                    <div [hidden]="industry.valid || industry.pristine" class="alert alert-danger">
+                                                        Industry must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
                                                 </td>
 
-                                                <td style="font-size: small">
-                                                    {{performance.industry}}
+                                                <td>
+                                                    <input type="text" class="form-control" name="country" [(ngModel)]="performance.country" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #country="ngModel"/>
+                                                    <div [hidden]="country.valid || country.pristine" class="alert alert-danger">
+                                                        Country must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
                                                 </td>
 
-                                                <td style="font-size: small">
-                                                    {{performance.country}}
+                                                <td>
+                                                    <input type="text" class="form-control" name="typeOfInvestment" [(ngModel)]="performance.typeOfInvestment" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #typeOfInvestment="ngModel"/>
+                                                    <div [hidden]="typeOfInvestment.valid || typeOfInvestment.pristine" class="alert alert-danger">
+                                                        Type of investment must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
                                                 </td>
 
-                                                <td style="font-size: small">
-                                                    {{performance.typeOfInvestment}}
+                                                <td>
+                                                    <input type="text" class="form-control" name="control" [(ngModel)]="performance.control" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #control="ngModel"/>
+                                                    <div [hidden]="control.valid || control.pristine" class="alert alert-danger">
+                                                        Control must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
                                                 </td>
 
-                                                <td style="font-size: small">
-                                                    {{performance.control}}
+                                                <td>
+                                                    <input type="text" class="form-control" name="dealSource" [(ngModel)]="performance.dealSource" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #dealSource="ngModel"/>
+                                                    <div [hidden]="dealSource.valid || dealSource.pristine" class="alert alert-danger">
+                                                        Deal source must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
                                                 </td>
 
-                                                <td style="font-size: small">
-                                                    {{performance.dealSource}}
-                                                </td>
-
-                                                <td style="font-size: small">
-                                                    {{performance.currency}}
+                                                <td>
+                                                    <input type="text" class="form-control" name="currency" [(ngModel)]="performance.currency" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #currency="ngModel"/>
+                                                    <div [hidden]="currency.valid || currency.pristine" class="alert alert-danger">
+                                                        Currency must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
                                                 </td>
                                             </tr>
                                         </table>
