My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -828,6 +828,9 @@
                     <li>
                         <a data-toggle="tab" href="#portfolioInfo">PORTFOLIO INFO</a>
                     </li>
+                    <li>
+                        <a data-toggle="tab" href="#dynamicIRR">DYNAMIC IRR CALCULATOR</a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                     <div id="performanceIdd" class="tab-pane fade in active">
@@ -1163,6 +1166,103 @@
                                                 <div class="pull-right">
                                                     <button type="submit" class="btn btn-success" *ngIf="canEdit()" (click)="savePortfolioInfo()" [disabled]="fund.id == 0 || fund.id == null">
                                                         SAVE
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <hr style="border-top: 1px solid #B5AEAE"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="dynamicIRR" class="tab-pane fade">
+                        <div style="position: relative;">
+                            <div [ngBusy]="busy">
+                                <br>
+                                <div class="row">
+                                    <div style="text-align: center">
+                                        <h4>{{fund.fundName}} Dynamic IRR calculator</h4>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <br>
+                                        <table class="table table-hover table-responsive" style="font-size: smaller">
+                                            <tr>
+                                                <th>Company description</th>
+                                                <th>Industry</th>
+                                                <th>Country</th>
+                                                <th>Type of investment</th>
+                                                <th>Control</th>
+                                                <th>Deal source</th>
+                                                <th>Currency</th>
+                                            </tr>
+                                            <tr *ngFor="let performance of fund.companyPerformanceIdd">
+                                                <td style="font-size: small">
+                                                    {{performance.companyName}}
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="companyDescription" [(ngModel)]="performance.companyDescription" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #companyDescription="ngModel"/>
+                                                    <div [hidden]="companyDescription.valid || companyDescription.pristine" class="alert alert-danger">
+                                                        Company description must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="industry" [(ngModel)]="performance.industry" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #industry="ngModel"/>
+                                                    <div [hidden]="industry.valid || industry.pristine" class="alert alert-danger">
+                                                        Industry must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="country" [(ngModel)]="performance.country" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #country="ngModel"/>
+                                                    <div [hidden]="country.valid || country.pristine" class="alert alert-danger">
+                                                        Country must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="typeOfInvestment" [(ngModel)]="performance.typeOfInvestment" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #typeOfInvestment="ngModel"/>
+                                                    <div [hidden]="typeOfInvestment.valid || typeOfInvestment.pristine" class="alert alert-danger">
+                                                        Type of investment must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="control" [(ngModel)]="performance.control" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #control="ngModel"/>
+                                                    <div [hidden]="control.valid || control.pristine" class="alert alert-danger">
+                                                        Control must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="dealSource" [(ngModel)]="performance.dealSource" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #dealSource="ngModel"/>
+                                                    <div [hidden]="dealSource.valid || dealSource.pristine" class="alert alert-danger">
+                                                        Deal source must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+
+                                                <td>
+                                                    <input type="text" class="form-control" name="currency" [(ngModel)]="performance.currency" placeholder="-" pattern="[A-Za-z0-9 ().-]{1,50}" #currency="ngModel"/>
+                                                    <div [hidden]="currency.valid || currency.pristine" class="alert alert-danger">
+                                                        Currency must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="pull-left">
+                                                    <button type="submit" class="btn btn-success" (click)="calculateIRR()" [disabled]="fund.id == 0 || fund.id == null">
+                                                        CALCULATE
                                                     </button>
                                                 </div>
                                             </div>
