--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1194,19 +1194,10 @@
                                     <div class="col-md-12">
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="meetingType">Meeting Type</label>
-                                                <select class="form-control" id="meetingType" [(ngModel)]="irrParam.meetingType">
+                                                <label for="companyDescription">Company description</label>
+                                                <select class="form-control" id="companyDescription" [(ngModel)]="irrParam.companyDescription">
                                                     <option value="NONE">---</option>
-                                                    <!--<option *ngFor = "let type of meetingTypes" [value]="type.code">{{type.nameEn}}</option>-->
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <div class="form-group">
-                                                <label for="memoType">Memo Type</label>
-                                                <select class="form-control" id="memoType" [(ngModel)]="irrParam.memoType">
-                                                    <option value="0">---</option>
-                                                    <!--<option *ngFor = "let type of memoTypes" [value]="type.code">{{type.nameEn}}</option>-->
+                                                    <option *ngFor = "let type of meetingTypes" [value]="type.code">{{type.nameEn}}</option>
                                                 </select>
                                             </div>
                                         </div>
