My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1197,7 +1197,7 @@
                                                 <label for="companyDescription">Company description</label>
                                                 <select class="form-control" id="companyDescription" [(ngModel)]="irrParam.companyDescription">
                                                     <option value="NONE">---</option>
-                                                    <option *ngFor = "let type of meetingTypes" [value]="type.code">{{type.nameEn}}</option>
+                                                    <option *ngFor = "let companyDescription of companyDescriptionIRRList" [value]="companyDescription">{{companyDescription}}</option>
                                                 </select>
                                             </div>
                                         </div>
