My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1194,8 +1194,8 @@
                                     <div class="col-md-12">
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="companyDescription">Company description</label>
-                                                <select class="form-control" id="companyDescription" [(ngModel)]="irrParam.companyDescription">
+                                                <label for="companyDescriptionIRR">Company description</label>
+                                                <select class="form-control" id="companyDescriptionIRR" [(ngModel)]="irrParam.companyDescription">
                                                     <option value="NONE">---</option>
                                                     <option *ngFor = "let companyDescription of companyDescriptionIRRList" [value]="companyDescription">{{companyDescription}}</option>
                                                 </select>
@@ -1203,8 +1203,8 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="industry">Industry</label>
-                                                <select class="form-control" id="industry" [(ngModel)]="irrParam.industry">
+                                                <label for="industryIRR">Industry</label>
+                                                <select class="form-control" id="industryIRR" [(ngModel)]="irrParam.industry">
                                                     <option value="NONE">---</option>
                                                     <option *ngFor = "let industry of industryIRRList" [value]="industry">{{industry}}</option>
                                                 </select>
@@ -1212,8 +1212,8 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="country">Country</label>
-                                                <select class="form-control" id="country" [(ngModel)]="irrParam.country">
+                                                <label for="countryIRR">Country</label>
+                                                <select class="form-control" id="countryIRR" [(ngModel)]="irrParam.country">
                                                     <option value="NONE">---</option>
                                                     <option *ngFor = "let country of countryIRRList" [value]="country">{{country}}</option>
                                                 </select>
@@ -1221,8 +1221,8 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="typeOfInvestment">Type of investment</label>
-                                                <select class="form-control" id="typeOfInvestment" [(ngModel)]="irrParam.typeOfInvestment">
+                                                <label for="typeOfInvestmentIRR">Type of investment</label>
+                                                <select class="form-control" id="typeOfInvestmentIRR" [(ngModel)]="irrParam.typeOfInvestment">
                                                     <option value="NONE">---</option>
                                                     <option *ngFor = "let typeOfInvestment of typeOfInvestmentIRRList" [value]="typeOfInvestment">{{typeOfInvestment}}</option>
                                                 </select>
@@ -1230,8 +1230,8 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="control">Control</label>
-                                                <select class="form-control" id="control" [(ngModel)]="irrParam.control">
+                                                <label for="controlIRR">Control</label>
+                                                <select class="form-control" id="controlIRR" [(ngModel)]="irrParam.control">
                                                     <option value="NONE">---</option>
                                                     <option *ngFor = "let control of controlIRRList" [value]="control">{{control}}</option>
                                                 </select>
@@ -1239,8 +1239,8 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="dealSource">Deal source</label>
-                                                <select class="form-control" id="dealSource" [(ngModel)]="irrParam.dealSource">
+                                                <label for="dealSourceIRR">Deal source</label>
+                                                <select class="form-control" id="dealSourceIRR" [(ngModel)]="irrParam.dealSource">
                                                     <option value="NONE">---</option>
                                                     <option *ngFor = "let dealSource of dealSourceIRRList" [value]="dealSource">{{dealSource}}</option>
                                                 </select>
@@ -1248,8 +1248,8 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label for="currency">Currency</label>
-                                                <select class="form-control" id="currency" [(ngModel)]="irrParam.currency">
+                                                <label for="currencyIRR">Currency</label>
+                                                <select class="form-control" id="currencyIRR" [(ngModel)]="irrParam.currency">
                                                     <option value="NONE">---</option>
                                                     <option *ngFor = "let currency of currencyIRRList" [value]="currency">{{currency}}</option>
                                                 </select>
